added google oauth

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 REACT_APP_HTTP_API=https://clothes-closet-rest.herokuapp.com
+REACT_APP_OAUTH_CLIENT_ID="802540763450-va0bec814bbqeasugtj3mek47vblajmm.apps.googleusercontent.com"
