--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
 REACT_APP_HTTP_API="http://localhost:8080"
+REACT_APP_OAUTH_CLIENT_ID="802540763450-va0bec814bbqeasugtj3mek47vblajmm.apps.googleusercontent.com"
