--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fullcalendar/interaction": "^6.0.2",
     "@fullcalendar/react": "6.0.2",
     "@fullcalendar/timegrid": "6.0.2",
+    "@react-oauth/google": "^0.5.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
