--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "private": true,
   "dependencies": {
     "@fullcalendar/core": "6.0.2",
-    "@fullcalendar/interaction": "^6.0.2",
+    "@fullcalendar/interaction": "6.0.2",
     "@fullcalendar/react": "6.0.2",
     "@fullcalendar/timegrid": "6.0.2",
-    "@react-oauth/google": "^0.5.1",
+    "@react-oauth/google": "0.5.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
     "react": "18.2.0",
-    "react-datepicker": "^4.8.0",
+    "react-data-table-component": "7.5.3",
+    "react-datepicker": "4.8.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.6.1",
     "react-scripts": "5.0.1",
-    "universal-cookie": "^4.0.4",
+    "styled-components": "5.3.6",
+    "universal-cookie": "4.0.4",
     "web-vitals": "2.1.4"
   },
   "scripts": {
