--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
     "react": "18.2.0",
+    "react-confirm-alert": "3.0.6",
     "react-data-table-component": "7.5.3",
     "react-datepicker": "4.8.0",
     "react-dom": "18.2.0",
