--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-data-table-component": "7.5.3",
     "react-datepicker": "4.8.0",
     "react-dom": "18.2.0",
+    "react-localization": "^1.0.19",
     "react-router-dom": "6.6.1",
     "react-scripts": "5.0.1",
     "styled-components": "5.3.6",
