better loading indicator

--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "react-data-table-component": "7.5.3",
     "react-datepicker": "4.8.0",
     "react-dom": "18.2.0",
-    "react-localization": "^1.0.19",
+    "react-loading-indicators": "0.0.11",
+    "react-localization": "1.0.19",
     "react-router-dom": "6.6.1",
     "react-scripts": "5.0.1",
-    "react-select": "^5.7.0",
+    "react-select": "5.7.0",
     "react-switch": "7.0.0",
     "styled-components": "5.3.6",
     "universal-cookie": "4.0.4",
