--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-loading-indicators": "0.0.11",
     "react-localization": "1.0.19",
+    "react-phone-number-input": "3.2.16",
     "react-router-dom": "6.6.1",
     "react-scripts": "5.0.1",
     "react-select": "5.7.0",
