prettier and husky

--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "start": "npx env-cmd -f .env.production react-scripts start",
     "build": "npx env-cmd -f .env.production react-scripts build",
     "start:dev": "npx env-cmd -f .env.development react-scripts start",
-    "build:dev": "npx env-cmd -f .env.development react-scripts build",
+    "build:dev": "npm run prettier && npx env-cmd -f .env.development react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "npx prettier-eslint \"src/**/*.js\" --write -l info"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +57,8 @@
     ]
   },
   "devDependencies": {
-    "env-cmd": "10.1.0"
+    "env-cmd": "10.1.0",
+    "husky": "^8.0.3",
+    "prettier-eslint-cli": "7.1.0"
   }
 }
