Change prod URL

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_HTTP_API=https://clothes-closet-rest.herokuapp.com
+REACT_APP_HTTP_API=https://rest.clothescloset.app
 REACT_APP_OAUTH_CLIENT_ID="802540763450-gblh2ivaea2rjgk4rmemjulsnoa2968a.apps.googleusercontent.com"
