--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
     "buffer": "6.0.3",
+    "libphonenumber-js": "1.10.44",
     "react": "18.2.0",
     "react-confirm-alert": "3.0.6",
     "react-data-table-component": "7.5.3",
