Added option to close the appointment and wait list, added missing translations

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 REACT_APP_HTTP_API="http://localhost:8080"
 REACT_APP_OAUTH_CLIENT_ID="802540763450-gblh2ivaea2rjgk4rmemjulsnoa2968a.apps.googleusercontent.com"
+REACT_APP_ENABLE_APPOINTMENTS=true
